--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@kinde-oss/kinde-auth-nextjs": "^2.10.0",
+    "@prisma/client": "^6.18.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -53,6 +54,7 @@
     "next": "^16.0.1",
     "next-themes": "^0.4.6",
     "openai": "^6.0.1",
+    "prisma": "^6.18.0",
     "react": "^18",
     "react-day-picker": "9.8.0",
     "react-dom": "^18",
@@ -60,6 +62,7 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
+    "stripe": "^19.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
