--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "1.3.1",
     "ai": "^5.0.84",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "feather-icons": "^4.29.2",
+    "framer-motion": "^12.23.24",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
@@ -65,6 +68,8 @@
     "stripe": "^19.2.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.0",
+    "vanta": "^0.5.24",
     "vaul": "^0.9.9",
     "zod": "^4.1.12"
   },
